# WFtranslator

./: .gitignore  MLone.py  README.md  a  aa  aaaaa  b  bb  bbb  dataMat.txt  dataMat2.txt  dataMat3.txt  ddd  dddd  fan_beam_with_curved_detector.ipynb  fanbeamcan.py  feffer.py  lukasb@snellius.surf.nl  ml.ipynb  mlas1file.py  mlonefile.py  oldStuff.py  shapes.py  test.py
.ipynb_checkpoints/: fan_beam_with_curved_detector-checkpoint.ipynb
feffer/: Cargo.toml  QQTvals.txt  QQTvals2.txt  matrix.txt  matrix2.txt
feffer/src/: backup  graph.rs  main.rs  minimizers.rs  pmcgraph.rs
