[package]
name = "feffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#must have libopenblas-dev installed and libssl-dev and openssl

[dependencies]
#rand = "0.8.5"
ndarray = "0.15.6"
#rand_chacha = "0.3.1"
rayon = "1.6.1"
parking_lot = "0.12.1"
#ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
nalgebra = "0.32.1"
argmin = {version = "0.8.0", features = ["full"]}
argmin-math = { version = "0.3.0", features = ["nalgebra_latest-serde"]}
#nshare = "0.9.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
plotters = "0.3"